[gd_scene load_steps=2 format=2]

[ext_resource path="res://gamemanager/GAMEMANAGER.gd" type="Script" id=1]

[node name="GAMEMANAGER" type="Node"]
script = ExtResource( 1 )
[connection signal="host" from="." to="." method="_on_host"]
[connection signal="join" from="." to="." method="_on_join"]
[connection signal="start_game" from="." to="." method="start_game_2"]
